// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authorization-strategies adminCookie should have the correct config 1`] = `
{
  "appendNext": true,
  "cookie": {
    "isHttpOnly": false,
    "isSameSite": "Lax",
    "isSecure": false,
    "name": "sid",
    "password": "cookieabcdef1234",
    "path": "/",
    "ttl": null,
  },
  "redirectTo": "/login",
  "validateFunc": [Function],
}
`;

exports[`authorization-strategies sessionCookie should have the correct config 1`] = `
{
  "cookie": {
    "clearInvalid": true,
    "isSecure": false,
    "name": "sid",
    "password": "cookieabcdef1234",
  },
  "redirectTo": "/licence-auth",
  "validateFunc": [Function],
}
`;
